final_fidelity_check.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources
> Task :app:mergeDebugResources
> Task :app:packageDebugResources
> Task :app:processDebugNavigationResources
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:parseDebugLocalResources
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:54: error: cannot find symbol
        binding.spPayoutFrequency.setAdapter(adapter);
               ^
  symbol:   variable spPayoutFrequency
  location: variable binding of type FragmentWizardFinalizeRulesBinding
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:57: error: cannot find symbol
        binding.spPayoutFrequency.setSelection(2);
               ^
  symbol:   variable spPayoutFrequency
  location: variable binding of type FragmentWizardFinalizeRulesBinding
/home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:63: error: cannot find symbol
        String frequency = binding.spPayoutFrequency.getSelectedItem().toString();
                                  ^
  symbol:   variable spPayoutFrequency
  location: variable binding of type FragmentWizardFinalizeRulesBinding
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///home/darlin-pafra/AndroidStudioProjects/Save/Front-end/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:54: error: cannot find symbol
          binding.spPayoutFrequency.setAdapter(adapter);
                 ^
    symbol:   variable spPayoutFrequency
    location: variable binding of type FragmentWizardFinalizeRulesBinding
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:57: error: cannot find symbol
          binding.spPayoutFrequency.setSelection(2);
                 ^
    symbol:   variable spPayoutFrequency
    location: variable binding of type FragmentWizardFinalizeRulesBinding
  /home/darlin-pafra/AndroidStudioProjects/Save/Front-end/app/src/main/java/com/example/save/ui/fragments/WizardFinalizeRulesFragment.java:63: error: cannot find symbol
          String frequency = binding.spPayoutFrequency.getSelectedItem().toString();
                                    ^
    symbol:   variable spPayoutFrequency
    location: variable binding of type FragmentWizardFinalizeRulesBinding
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
30 actionable tasks: 9 executed, 21 up-to-date
